--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,10 @@
 
 #bluesquare {
   position: absolute;
-  background-color: blue;
+  background-image: url(../images/ian-is-a-genius.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   top: 40px;
   left: 40px;
   height: 100px;
@@ -22,7 +25,7 @@
 
 .moveme {
   animation-name: blue-scooter;
-  animation-duration: 4s;
+  animation-duration: 6s;
   animation-fill-mode: forwards;
 }
 
